Bug 7744 - integer values not immediately updated in xconfig display
Summary: integer values not immediately updated in xconfig display
Status: CLOSED CODE_FIX
Alias: None
Product: Other
Classification: Unclassified
Component: Configuration (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Roman Zippel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-25 19:07 UTC by Randy Dunlap
Modified: 2007-06-25 07:56 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.20-rc2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Randy Dunlap 2006-12-25 19:07:53 UTC
Most recent kernel where this bug did *NOT* occur:  no idea.
Distribution:  SUSE
Hardware Environment: dual core x86_64
Software Environment:
Problem Description: When an integer config value is entered in xconfig (qconf),
its new value is not updated on-screen until the menu is left (move to
another menu) and then return to the menu with the changed value.

Steps to reproduce: Applies to all editable integer values that I have tested,
e.g., NR_CPUS, LOG_BUF_SHIFT, SECURITY_SELINUX_POLICYDB_VERSION_MAX_VALUE,
IDE_MAX_HWIFS, BLK_DEV_RAM_SIZE, LEGACY_PTY_COUNT, MAX_RAW_DEVS.
Edit the numeric value, change it, press Enter/Return.  The value on the
left side of the config line item remains at the old/previous value, while
the value on the right side of the display contains the new value.
When I move to a different config menu and then back to the changed menu,
the value of the left side of the config line item contains the new value.
Comment 1 Natalie Protasevich 2007-06-24 22:55:56 UTC
Randy,
Is it still this way, or was it fixed by now?
Thanks,
--Natalie

Note You need to log in before you can comment on or make changes to this bug.